--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <meta name="description" content="Página de links de Victor Carvalho - Desenvolvedor Front-End em formação. Acesse meu GitHub, LinkedIn e Instagram.">
+    <meta name="author" content="Victor Carvalho">
+    <meta name="theme-color" content="#0f0f0f">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,21 +30,30 @@
     <main>
         <section aria-labelledby="links-title">
             <h2 id="links-title" class="sr-only">Meus Links</h2>
-            <nav>
+            <nav role="navigation">
                 <ul>
                     <li>
-                        <a href="https://github.com/victorcarvalhob" target="_blank" aria-label="Acessar perfil do Victor Carvalho no GitHub">
-                            <i class="fab fa-github"></i>GitHub
+                        <a href="https://github.com/victorcarvalhob"
+                           target="_blank"
+                           rel="noopener noreferrer"
+                           aria-label="Acessar perfil do Victor Carvalho no GitHub">
+                           <i class="fab fa-github"></i>GitHub
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.linkedin.com/in/ovictorcarvalho-dev/" target="_blank" aria-label="Acessar perfil do Victor Carvalho no LinkedIn">
-                            <i class="fab fa-linkedin"></i>LinkedIn
+                        <a href="https://www.linkedin.com/in/ovictorcarvalho-dev/"
+                           target="_blank"
+                           rel="noopener noreferrer"
+                           aria-label="Acessar perfil do Victor Carvalho no LinkedIn">
+                           <i class="fab fa-linkedin"></i>LinkedIn
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.instagram.com/ovictorcarvalho_/" target="_blank" aria-label="Acessar perfil do Victor Carvalho no Instagram">
-                            <i class="fab fa-instagram"></i>Instagram
+                        <a href="https://www.instagram.com/ovictorcarvalho_/"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        aria-label="Acessar perfil do Victor Carvalho no Instagram">
+                        <i class="fab fa-instagram"></i>Instagram
                         </a>
                     </li>
                 </ul>
