feat(seo): adicionar meta tagas open graph, keywords e twitter card

--- a/index.html
+++ b/index.html
@@ -6,7 +6,19 @@
 
     <meta name="description" content="Página de links de Victor Carvalho - Desenvolvedor Front-End em formação. Acesse meu GitHub, LinkedIn e Instagram.">
     <meta name="author" content="Victor Carvalho">
+    <meta name="keywords" content="Victor Carvalho, Desenvolvedor Front-End, GitHub, LinkedIn, Instagram, Portfólio, DevLinks">
     <meta name="theme-color" content="#0f0f0f">
+
+    <meta property="og:title" content="Victor Carvalho - Desenvolvedor Front-End">
+    <meta property="og:description" content="Acesse meus links: GitHub, LinkedIn e Instagram.">
+    <meta property="og:image" content="https://victorcarvalhob.github.io/devlinks-victor/assets/profile.jpg">
+    <meta property="og:url" content="https://victorcarvalhob.github.io/devlinks-victor/">
+    <meta property="og:type" content="website">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Victor Carvalho - Desenvolvedor Front-End">
+    <meta name="twitter:description" content="Acesse meus links: GitHub, LinkedIn e Instagram.">
+    <meta name="twitter:image" content="https://victorcarvalhob.github.io/devlinks-victor/assets/profile.jpg">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
