feat(ui): adicionar interações visuais, tema claro/escuro e refinamento de layout

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 
             <h1 id="profile-title">Victor Carvalho</h1>
             <p>Desenvolvedor Front-End em formação</p>
+            <button id="theme-toggle" aria-label="Alternar tema">🌙</button>
         </section>
     </header>
 
@@ -84,5 +85,6 @@
         <p>&copy; 2025 Victor Carvalho. Todos os direitos reservados.</p>
     </footer>
     
+    <script src="script.js"></script>
 </body>
 </html>
