feat: expandir devlinks com seção sobre mim e link para dowload de currículo

--- a/index.html
+++ b/index.html
@@ -47,6 +47,14 @@
         </section>
     </header>
 
+    <section id="about" aria-labelledby="about-title">
+        <h2 id="about-title" class="sr-only">Sobre mim</h2>
+        <p class="about-text">
+            Apaixonado por tecnologia, focado em construir interfaces modernas e funcionais. 
+            Atualmente estudando e desenvolvendo projetos Front-End para consolidar minha carreira na área.
+        </p>
+    </section>
+
     <main>
         <section aria-labelledby="links-title">
             <h2 id="links-title" class="sr-only">Meus Links</h2>
@@ -74,6 +82,13 @@
                         rel="noopener noreferrer"
                         aria-label="Acessar perfil do Victor Carvalho no Instagram">
                         <i class="fab fa-instagram"></i>Instagram
+                        </a>
+                    </li>
+                    <li>
+                        <a href="assets/curriculo-victor-carvalho.pdf"
+                        download="Victor-Carvalho-CV.pdf"
+                        aria-label="Baixar currículo de Victor Carvalho em PDF">
+                        <i class="fas fa-file-pdf"></i>Currículo
                         </a>
                     </li>
                 </ul>
