--- a/index.html
+++ b/index.html
@@ -59,38 +59,8 @@
         <section aria-labelledby="links-title">
             <h2 id="links-title" class="sr-only">Meus Links</h2>
             <nav role="navigation">
-                <ul>
-                    <li>
-                        <a href="https://github.com/victorcarvalhob"
-                           target="_blank"
-                           rel="noopener noreferrer"
-                           aria-label="Acessar perfil do Victor Carvalho no GitHub">
-                           <i class="fab fa-github"></i>GitHub
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.linkedin.com/in/ovictorcarvalho-dev/"
-                           target="_blank"
-                           rel="noopener noreferrer"
-                           aria-label="Acessar perfil do Victor Carvalho no LinkedIn">
-                           <i class="fab fa-linkedin"></i>LinkedIn
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.instagram.com/ovictorcarvalho_/"
-                        target="_blank"
-                        rel="noopener noreferrer"
-                        aria-label="Acessar perfil do Victor Carvalho no Instagram">
-                        <i class="fab fa-instagram"></i>Instagram
-                        </a>
-                    </li>
-                    <li>
-                        <a href="assets/curriculo-victor-carvalho.pdf"
-                        download="Victor-Carvalho-CV.pdf"
-                        aria-label="Baixar currículo de Victor Carvalho em PDF">
-                        <i class="fas fa-file-pdf"></i>Currículo
-                        </a>
-                    </li>
+                <ul id="links-container">
+                    <!-- Links serão carregados dinamicamente via JS -->
                 </ul>
             </nav>
         </section>
