feat: adiciona animações sutis em CSS para melhorar a experiência do usuário

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                      loading="lazy">
             </picture>
 
-            <h1 id="profile-title">Victor Carvalho</h1>
-            <p>Desenvolvedor Front-End em formação</p>
+            <h1 id="profile-title" class="fade-in">Victor Carvalho</h1>
+            <p class="fade-in">Desenvolvedor Front-End em formação</p>
             <button id="theme-toggle" aria-label="Alternar tema">🌙</button>
         </section>
     </header>
@@ -58,7 +58,7 @@
     <main>
         <section aria-labelledby="links-title">
             <h2 id="links-title" class="sr-only">Meus Links</h2>
-            <nav role="navigation">
+            <nav role="navigation" class="fade-in">
                 <ul id="links-container">
                     <!-- Links serão carregados dinamicamente via JS -->
                 </ul>
